🌈 style: 覆盖sidebar样式进行统一

--- a/apps/frontend/src/app/styles/index.css
+++ b/apps/frontend/src/app/styles/index.css
@@ -3,6 +3,7 @@
 @import './moge-light.css';
 @import './moge-dark.css';
 @import './moge-utilities.css';
+@import './cover-sidebar.css';
 
 @custom-variant dark (&:is(.dark *));
 
